# storm-loop

./: .gitignore  .pre-commit-config.yaml  ACADEMIC_TESTING_FRAMEWORK.md  ACADEMIC_VALIDATION_FRAMEWORK_SUMMARY.md  ACCEPTANCE_CRITERIA_ISSUE_100.md  AGENTS.md  APA_STRATEGY_IMPLEMENTATION.md  COMPREHENSIVE_REVIEW_REPORT.md  DEBT_ANALYSIS_FINDINGS.md  GEMINI_REVIEW_FIXES_SUMMARY.md  IMPLEMENTATION_GUIDE_ISSUE_100.md  MIGRATION_PLAN.md  MUST_FIX_ISSUES_RESOLVED.md  OPUS_REVIEW_FIXES_SUMMARY.md  PR52_refactoring_examples.md  PR53_refactoring_examples.md  PR74_fixes_summary.md  PR82_fixes_summary.md  PR83_Developer_Instructions.md  PR83_improvement_plan.md  PR87_From_Drawing_Board_Instructions.md  PR87_Minor_Fixes_Instructions.md  PR90_IMPROVEMENTS_SUMMARY.md  PRD.md  PRISMA_80_20_SUMMARY.md  PRISMA_RESTORATION_ROADMAP.md  README-STORM-LOOP.md  README.md  REMIND_ME.md  REVIEW_IMPROVEMENTS.md  SETUP_COMPLETE_ISSUE_100.md  academic_validation_demo.py  backoff.py  conftest.py  debug_outline.py  demo_80_20_screening.py  demo_critic_loops.py  demo_framework.py  demo_prisma_assistant.py  demo_real_validation.py  (+69 more)
.taskmaster/: state.json
academic_validation_framework/: README.md  STRATEGY_REFACTOR_README.md  __init__.py  component_registry.py  config.py  core.py  exceptions.py  interfaces.py  interfaces_v2.py  models.py  session_manager.py  test_runner.py  test_strategy_refactor.py
api/: health.py
debt_analysis/: action_items.md  debt_architecture.md  debt_heat_map.json  debt_performance.md  debt_quality.md  debt_security.md  debt_summary.md
debt_analysis_project/: action_items.md  debt_architecture.md  debt_heat_map.json  debt_inventory.json  debt_summary.md
demo_memory/: memory.json
deployment/: README.md
examples/: perplexity_usage_example.py
knowledge_storm/: __init__.py  agent_coordinator.py  config_persistence.py  config_validators.py  critic_agent.py  dspy_stub.py  enhanced_engine.py  environment_config.py  exceptions.py  hybrid_engine.py  interface.py  lm.py  prisma_assistant.py  requirements.txt  rm.py  setup.py  storm_config.py  storm_loop_runner.py  utils.py  verify_system.py  verify_system.py.bak
models/: agent.py
prisma_assistant/: README.md  core.py  setup.py
research/: __init__.py  config.py  content.py  core.py  exceptions.py  factory.py  interfaces.py  llm.py  query.py  search.py
research_outputs/: d640087a-4d8f-402d-a7c9-63bc8fa6bb2e_report.html  d640087a-4d8f-402d-a7c9-63bc8fa6bb2e_report.md
storm_auth/: __init__.py  auth.py  exceptions.py  middleware.py  models.py  rbac.py
storm_health/: __init__.py  health_checks.py  readiness.py
storm_loop/: __init__.py  cache.py  config.py  main.py  retriever.py
storm_loop_demo_output/: storm_loop_complete_demo_AI_Impact_on_Academic_Research.json
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_academic_models.py  test_academic_validation.py  (+27 more)
(+280 files in other folders)
